folo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: teto
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: backend.singhritesh85.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: demo6-folo
                port:   
                  number: 3500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo5-folo
                port: 
                  number: 3000
